parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> external_list
Rule 2     external_list -> <empty>
Rule 3     external_list -> external_list external_declaration
Rule 4     external_declaration -> declaration
Rule 5     external_declaration -> function_def
Rule 6     declaration -> type_specifier init_declarator_list SEMICOLON
Rule 7     init_declarator_list -> init_declarator
Rule 8     init_declarator_list -> init_declarator_list COMMA init_declarator
Rule 9     init_declarator -> IDENTIFIER
Rule 10    init_declarator -> IDENTIFIER ASSIGN expression
Rule 11    type_specifier -> INT
Rule 12    type_specifier -> FLOAT
Rule 13    type_specifier -> CHAR_TYPE
Rule 14    type_specifier -> VOID
Rule 15    function_def -> type_specifier IDENTIFIER LPAREN param_list_opt RPAREN compound_stmt
Rule 16    param_list_opt -> <empty>
Rule 17    param_list_opt -> param_list
Rule 18    param_list -> param
Rule 19    param_list -> param_list COMMA param
Rule 20    param -> type_specifier IDENTIFIER
Rule 21    compound_stmt -> LBRACE stmt_list RBRACE
Rule 22    stmt_list -> <empty>
Rule 23    stmt_list -> stmt_list statement
Rule 24    statement -> expression_stmt
Rule 25    statement -> compound_stmt
Rule 26    statement -> selection_stmt
Rule 27    statement -> iteration_stmt
Rule 28    statement -> return_stmt
Rule 29    statement -> declaration
Rule 30    expression_stmt -> expression_opt SEMICOLON
Rule 31    expression_opt -> <empty>
Rule 32    expression_opt -> expression
Rule 33    selection_stmt -> IF LPAREN expression RPAREN statement
Rule 34    selection_stmt -> IF LPAREN expression RPAREN statement ELSE statement
Rule 35    iteration_stmt -> WHILE LPAREN expression RPAREN statement
Rule 36    iteration_stmt -> FOR LPAREN expression_opt SEMICOLON expression_opt SEMICOLON expression_opt RPAREN statement
Rule 37    return_stmt -> RETURN expression_opt SEMICOLON
Rule 38    expression -> assignment_expression
Rule 39    assignment_expression -> logical_or_expression
Rule 40    assignment_expression -> logical_or_expression ASSIGN assignment_expression
Rule 41    logical_or_expression -> logical_and_expression
Rule 42    logical_or_expression -> logical_or_expression OR logical_and_expression
Rule 43    logical_and_expression -> equality_expression
Rule 44    logical_and_expression -> logical_and_expression AND equality_expression
Rule 45    equality_expression -> relational_expression
Rule 46    equality_expression -> equality_expression EQ relational_expression
Rule 47    equality_expression -> equality_expression NE relational_expression
Rule 48    relational_expression -> additive_expression
Rule 49    relational_expression -> relational_expression LT additive_expression
Rule 50    relational_expression -> relational_expression GT additive_expression
Rule 51    relational_expression -> relational_expression LE additive_expression
Rule 52    relational_expression -> relational_expression GE additive_expression
Rule 53    additive_expression -> multiplicative_expression
Rule 54    additive_expression -> additive_expression PLUS multiplicative_expression
Rule 55    additive_expression -> additive_expression MINUS multiplicative_expression
Rule 56    multiplicative_expression -> unary_expression
Rule 57    multiplicative_expression -> multiplicative_expression TIMES unary_expression
Rule 58    multiplicative_expression -> multiplicative_expression DIVIDE unary_expression
Rule 59    multiplicative_expression -> multiplicative_expression MOD unary_expression
Rule 60    unary_expression -> primary_expression
Rule 61    unary_expression -> NOT unary_expression
Rule 62    unary_expression -> PLUS unary_expression
Rule 63    unary_expression -> MINUS unary_expression
Rule 64    primary_expression -> IDENTIFIER
Rule 65    primary_expression -> INT_CONST
Rule 66    primary_expression -> FLOAT_CONST
Rule 67    primary_expression -> CHAR_CONST
Rule 68    primary_expression -> STRING
Rule 69    primary_expression -> LPAREN expression RPAREN
Rule 70    primary_expression -> IDENTIFIER LPAREN arg_list_opt RPAREN
Rule 71    arg_list_opt -> <empty>
Rule 72    arg_list_opt -> arg_list
Rule 73    arg_list -> expression
Rule 74    arg_list -> arg_list COMMA expression

Terminals, with rules where they appear

AND                  : 44
ASSIGN               : 10 40
CHAR_CONST           : 67
CHAR_TYPE            : 13
COMMA                : 8 19 74
DIVIDE               : 58
ELSE                 : 34
EQ                   : 46
FLOAT                : 12
FLOAT_CONST          : 66
FOR                  : 36
GE                   : 52
GT                   : 50
IDENTIFIER           : 9 10 15 20 64 70
IF                   : 33 34
INT                  : 11
INT_CONST            : 65
LBRACE               : 21
LE                   : 51
LPAREN               : 15 33 34 35 36 69 70
LT                   : 49
MINUS                : 55 63
MOD                  : 59
NE                   : 47
NOT                  : 61
OR                   : 42
PLUS                 : 54 62
RBRACE               : 21
RETURN               : 37
RPAREN               : 15 33 34 35 36 69 70
SEMICOLON            : 6 30 36 36 37
STRING               : 68
TIMES                : 57
VOID                 : 14
WHILE                : 35
error                : 

Nonterminals, with rules where they appear

additive_expression  : 48 49 50 51 52 54 55
arg_list             : 72 74
arg_list_opt         : 70
assignment_expression : 38 40
compound_stmt        : 15 25
declaration          : 4 29
equality_expression  : 43 44 46 47
expression           : 10 32 33 34 35 69 73 74
expression_opt       : 30 36 36 36 37
expression_stmt      : 24
external_declaration : 3
external_list        : 1 3
function_def         : 5
init_declarator      : 7 8
init_declarator_list : 6 8
iteration_stmt       : 27
logical_and_expression : 41 42 44
logical_or_expression : 39 40 42
multiplicative_expression : 53 54 55 57 58 59
param                : 18 19
param_list           : 17 19
param_list_opt       : 15
primary_expression   : 60
program              : 0
relational_expression : 45 46 47 49 50 51 52
return_stmt          : 28
selection_stmt       : 26
statement            : 23 33 34 34 35 36
stmt_list            : 21 23
type_specifier       : 6 15 20
unary_expression     : 56 57 58 59 61 62 63

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . external_list
    (2) external_list -> .
    (3) external_list -> . external_list external_declaration

    INT             reduce using rule 2 (external_list -> .)
    FLOAT           reduce using rule 2 (external_list -> .)
    CHAR_TYPE       reduce using rule 2 (external_list -> .)
    VOID            reduce using rule 2 (external_list -> .)
    $end            reduce using rule 2 (external_list -> .)

    program                        shift and go to state 1
    external_list                  shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> external_list .
    (3) external_list -> external_list . external_declaration
    (4) external_declaration -> . declaration
    (5) external_declaration -> . function_def
    (6) declaration -> . type_specifier init_declarator_list SEMICOLON
    (15) function_def -> . type_specifier IDENTIFIER LPAREN param_list_opt RPAREN compound_stmt
    (11) type_specifier -> . INT
    (12) type_specifier -> . FLOAT
    (13) type_specifier -> . CHAR_TYPE
    (14) type_specifier -> . VOID

    $end            reduce using rule 1 (program -> external_list .)
    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    CHAR_TYPE       shift and go to state 9
    VOID            shift and go to state 10

    external_declaration           shift and go to state 3
    declaration                    shift and go to state 4
    function_def                   shift and go to state 5
    type_specifier                 shift and go to state 6

state 3

    (3) external_list -> external_list external_declaration .

    INT             reduce using rule 3 (external_list -> external_list external_declaration .)
    FLOAT           reduce using rule 3 (external_list -> external_list external_declaration .)
    CHAR_TYPE       reduce using rule 3 (external_list -> external_list external_declaration .)
    VOID            reduce using rule 3 (external_list -> external_list external_declaration .)
    $end            reduce using rule 3 (external_list -> external_list external_declaration .)


state 4

    (4) external_declaration -> declaration .

    INT             reduce using rule 4 (external_declaration -> declaration .)
    FLOAT           reduce using rule 4 (external_declaration -> declaration .)
    CHAR_TYPE       reduce using rule 4 (external_declaration -> declaration .)
    VOID            reduce using rule 4 (external_declaration -> declaration .)
    $end            reduce using rule 4 (external_declaration -> declaration .)


state 5

    (5) external_declaration -> function_def .

    INT             reduce using rule 5 (external_declaration -> function_def .)
    FLOAT           reduce using rule 5 (external_declaration -> function_def .)
    CHAR_TYPE       reduce using rule 5 (external_declaration -> function_def .)
    VOID            reduce using rule 5 (external_declaration -> function_def .)
    $end            reduce using rule 5 (external_declaration -> function_def .)


state 6

    (6) declaration -> type_specifier . init_declarator_list SEMICOLON
    (15) function_def -> type_specifier . IDENTIFIER LPAREN param_list_opt RPAREN compound_stmt
    (7) init_declarator_list -> . init_declarator
    (8) init_declarator_list -> . init_declarator_list COMMA init_declarator
    (9) init_declarator -> . IDENTIFIER
    (10) init_declarator -> . IDENTIFIER ASSIGN expression

    IDENTIFIER      shift and go to state 12

    init_declarator_list           shift and go to state 11
    init_declarator                shift and go to state 13

state 7

    (11) type_specifier -> INT .

    IDENTIFIER      reduce using rule 11 (type_specifier -> INT .)


state 8

    (12) type_specifier -> FLOAT .

    IDENTIFIER      reduce using rule 12 (type_specifier -> FLOAT .)


state 9

    (13) type_specifier -> CHAR_TYPE .

    IDENTIFIER      reduce using rule 13 (type_specifier -> CHAR_TYPE .)


state 10

    (14) type_specifier -> VOID .

    IDENTIFIER      reduce using rule 14 (type_specifier -> VOID .)


state 11

    (6) declaration -> type_specifier init_declarator_list . SEMICOLON
    (8) init_declarator_list -> init_declarator_list . COMMA init_declarator

    SEMICOLON       shift and go to state 14
    COMMA           shift and go to state 15


state 12

    (15) function_def -> type_specifier IDENTIFIER . LPAREN param_list_opt RPAREN compound_stmt
    (9) init_declarator -> IDENTIFIER .
    (10) init_declarator -> IDENTIFIER . ASSIGN expression

    LPAREN          shift and go to state 16
    SEMICOLON       reduce using rule 9 (init_declarator -> IDENTIFIER .)
    COMMA           reduce using rule 9 (init_declarator -> IDENTIFIER .)
    ASSIGN          shift and go to state 17


state 13

    (7) init_declarator_list -> init_declarator .

    SEMICOLON       reduce using rule 7 (init_declarator_list -> init_declarator .)
    COMMA           reduce using rule 7 (init_declarator_list -> init_declarator .)


state 14

    (6) declaration -> type_specifier init_declarator_list SEMICOLON .

    INT             reduce using rule 6 (declaration -> type_specifier init_declarator_list SEMICOLON .)
    FLOAT           reduce using rule 6 (declaration -> type_specifier init_declarator_list SEMICOLON .)
    CHAR_TYPE       reduce using rule 6 (declaration -> type_specifier init_declarator_list SEMICOLON .)
    VOID            reduce using rule 6 (declaration -> type_specifier init_declarator_list SEMICOLON .)
    $end            reduce using rule 6 (declaration -> type_specifier init_declarator_list SEMICOLON .)
    RBRACE          reduce using rule 6 (declaration -> type_specifier init_declarator_list SEMICOLON .)
    LBRACE          reduce using rule 6 (declaration -> type_specifier init_declarator_list SEMICOLON .)
    IF              reduce using rule 6 (declaration -> type_specifier init_declarator_list SEMICOLON .)
    WHILE           reduce using rule 6 (declaration -> type_specifier init_declarator_list SEMICOLON .)
    FOR             reduce using rule 6 (declaration -> type_specifier init_declarator_list SEMICOLON .)
    RETURN          reduce using rule 6 (declaration -> type_specifier init_declarator_list SEMICOLON .)
    NOT             reduce using rule 6 (declaration -> type_specifier init_declarator_list SEMICOLON .)
    PLUS            reduce using rule 6 (declaration -> type_specifier init_declarator_list SEMICOLON .)
    MINUS           reduce using rule 6 (declaration -> type_specifier init_declarator_list SEMICOLON .)
    IDENTIFIER      reduce using rule 6 (declaration -> type_specifier init_declarator_list SEMICOLON .)
    INT_CONST       reduce using rule 6 (declaration -> type_specifier init_declarator_list SEMICOLON .)
    FLOAT_CONST     reduce using rule 6 (declaration -> type_specifier init_declarator_list SEMICOLON .)
    CHAR_CONST      reduce using rule 6 (declaration -> type_specifier init_declarator_list SEMICOLON .)
    STRING          reduce using rule 6 (declaration -> type_specifier init_declarator_list SEMICOLON .)
    LPAREN          reduce using rule 6 (declaration -> type_specifier init_declarator_list SEMICOLON .)
    SEMICOLON       reduce using rule 6 (declaration -> type_specifier init_declarator_list SEMICOLON .)
    ELSE            reduce using rule 6 (declaration -> type_specifier init_declarator_list SEMICOLON .)


state 15

    (8) init_declarator_list -> init_declarator_list COMMA . init_declarator
    (9) init_declarator -> . IDENTIFIER
    (10) init_declarator -> . IDENTIFIER ASSIGN expression

    IDENTIFIER      shift and go to state 19

    init_declarator                shift and go to state 18

state 16

    (15) function_def -> type_specifier IDENTIFIER LPAREN . param_list_opt RPAREN compound_stmt
    (16) param_list_opt -> .
    (17) param_list_opt -> . param_list
    (18) param_list -> . param
    (19) param_list -> . param_list COMMA param
    (20) param -> . type_specifier IDENTIFIER
    (11) type_specifier -> . INT
    (12) type_specifier -> . FLOAT
    (13) type_specifier -> . CHAR_TYPE
    (14) type_specifier -> . VOID

    RPAREN          reduce using rule 16 (param_list_opt -> .)
    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    CHAR_TYPE       shift and go to state 9
    VOID            shift and go to state 10

    type_specifier                 shift and go to state 20
    param_list_opt                 shift and go to state 21
    param_list                     shift and go to state 22
    param                          shift and go to state 23

state 17

    (10) init_declarator -> IDENTIFIER ASSIGN . expression
    (38) expression -> . assignment_expression
    (39) assignment_expression -> . logical_or_expression
    (40) assignment_expression -> . logical_or_expression ASSIGN assignment_expression
    (41) logical_or_expression -> . logical_and_expression
    (42) logical_or_expression -> . logical_or_expression OR logical_and_expression
    (43) logical_and_expression -> . equality_expression
    (44) logical_and_expression -> . logical_and_expression AND equality_expression
    (45) equality_expression -> . relational_expression
    (46) equality_expression -> . equality_expression EQ relational_expression
    (47) equality_expression -> . equality_expression NE relational_expression
    (48) relational_expression -> . additive_expression
    (49) relational_expression -> . relational_expression LT additive_expression
    (50) relational_expression -> . relational_expression GT additive_expression
    (51) relational_expression -> . relational_expression LE additive_expression
    (52) relational_expression -> . relational_expression GE additive_expression
    (53) additive_expression -> . multiplicative_expression
    (54) additive_expression -> . additive_expression PLUS multiplicative_expression
    (55) additive_expression -> . additive_expression MINUS multiplicative_expression
    (56) multiplicative_expression -> . unary_expression
    (57) multiplicative_expression -> . multiplicative_expression TIMES unary_expression
    (58) multiplicative_expression -> . multiplicative_expression DIVIDE unary_expression
    (59) multiplicative_expression -> . multiplicative_expression MOD unary_expression
    (60) unary_expression -> . primary_expression
    (61) unary_expression -> . NOT unary_expression
    (62) unary_expression -> . PLUS unary_expression
    (63) unary_expression -> . MINUS unary_expression
    (64) primary_expression -> . IDENTIFIER
    (65) primary_expression -> . INT_CONST
    (66) primary_expression -> . FLOAT_CONST
    (67) primary_expression -> . CHAR_CONST
    (68) primary_expression -> . STRING
    (69) primary_expression -> . LPAREN expression RPAREN
    (70) primary_expression -> . IDENTIFIER LPAREN arg_list_opt RPAREN

    NOT             shift and go to state 37
    PLUS            shift and go to state 33
    MINUS           shift and go to state 34
    IDENTIFIER      shift and go to state 24
    INT_CONST       shift and go to state 38
    FLOAT_CONST     shift and go to state 39
    CHAR_CONST      shift and go to state 40
    STRING          shift and go to state 41
    LPAREN          shift and go to state 42

    expression                     shift and go to state 25
    assignment_expression          shift and go to state 26
    logical_or_expression          shift and go to state 27
    logical_and_expression         shift and go to state 28
    equality_expression            shift and go to state 29
    relational_expression          shift and go to state 30
    additive_expression            shift and go to state 31
    multiplicative_expression      shift and go to state 32
    unary_expression               shift and go to state 35
    primary_expression             shift and go to state 36

state 18

    (8) init_declarator_list -> init_declarator_list COMMA init_declarator .

    SEMICOLON       reduce using rule 8 (init_declarator_list -> init_declarator_list COMMA init_declarator .)
    COMMA           reduce using rule 8 (init_declarator_list -> init_declarator_list COMMA init_declarator .)


state 19

    (9) init_declarator -> IDENTIFIER .
    (10) init_declarator -> IDENTIFIER . ASSIGN expression

    SEMICOLON       reduce using rule 9 (init_declarator -> IDENTIFIER .)
    COMMA           reduce using rule 9 (init_declarator -> IDENTIFIER .)
    ASSIGN          shift and go to state 17


state 20

    (20) param -> type_specifier . IDENTIFIER

    IDENTIFIER      shift and go to state 43


state 21

    (15) function_def -> type_specifier IDENTIFIER LPAREN param_list_opt . RPAREN compound_stmt

    RPAREN          shift and go to state 44


state 22

    (17) param_list_opt -> param_list .
    (19) param_list -> param_list . COMMA param

    RPAREN          reduce using rule 17 (param_list_opt -> param_list .)
    COMMA           shift and go to state 45


state 23

    (18) param_list -> param .

    COMMA           reduce using rule 18 (param_list -> param .)
    RPAREN          reduce using rule 18 (param_list -> param .)


state 24

    (64) primary_expression -> IDENTIFIER .
    (70) primary_expression -> IDENTIFIER . LPAREN arg_list_opt RPAREN

    TIMES           reduce using rule 64 (primary_expression -> IDENTIFIER .)
    DIVIDE          reduce using rule 64 (primary_expression -> IDENTIFIER .)
    MOD             reduce using rule 64 (primary_expression -> IDENTIFIER .)
    PLUS            reduce using rule 64 (primary_expression -> IDENTIFIER .)
    MINUS           reduce using rule 64 (primary_expression -> IDENTIFIER .)
    LT              reduce using rule 64 (primary_expression -> IDENTIFIER .)
    GT              reduce using rule 64 (primary_expression -> IDENTIFIER .)
    LE              reduce using rule 64 (primary_expression -> IDENTIFIER .)
    GE              reduce using rule 64 (primary_expression -> IDENTIFIER .)
    EQ              reduce using rule 64 (primary_expression -> IDENTIFIER .)
    NE              reduce using rule 64 (primary_expression -> IDENTIFIER .)
    AND             reduce using rule 64 (primary_expression -> IDENTIFIER .)
    ASSIGN          reduce using rule 64 (primary_expression -> IDENTIFIER .)
    OR              reduce using rule 64 (primary_expression -> IDENTIFIER .)
    SEMICOLON       reduce using rule 64 (primary_expression -> IDENTIFIER .)
    COMMA           reduce using rule 64 (primary_expression -> IDENTIFIER .)
    RPAREN          reduce using rule 64 (primary_expression -> IDENTIFIER .)
    LPAREN          shift and go to state 46


state 25

    (10) init_declarator -> IDENTIFIER ASSIGN expression .

    SEMICOLON       reduce using rule 10 (init_declarator -> IDENTIFIER ASSIGN expression .)
    COMMA           reduce using rule 10 (init_declarator -> IDENTIFIER ASSIGN expression .)


state 26

    (38) expression -> assignment_expression .

    SEMICOLON       reduce using rule 38 (expression -> assignment_expression .)
    COMMA           reduce using rule 38 (expression -> assignment_expression .)
    RPAREN          reduce using rule 38 (expression -> assignment_expression .)


state 27

    (39) assignment_expression -> logical_or_expression .
    (40) assignment_expression -> logical_or_expression . ASSIGN assignment_expression
    (42) logical_or_expression -> logical_or_expression . OR logical_and_expression

    SEMICOLON       reduce using rule 39 (assignment_expression -> logical_or_expression .)
    COMMA           reduce using rule 39 (assignment_expression -> logical_or_expression .)
    RPAREN          reduce using rule 39 (assignment_expression -> logical_or_expression .)
    ASSIGN          shift and go to state 47
    OR              shift and go to state 48


state 28

    (41) logical_or_expression -> logical_and_expression .
    (44) logical_and_expression -> logical_and_expression . AND equality_expression

    ASSIGN          reduce using rule 41 (logical_or_expression -> logical_and_expression .)
    OR              reduce using rule 41 (logical_or_expression -> logical_and_expression .)
    SEMICOLON       reduce using rule 41 (logical_or_expression -> logical_and_expression .)
    COMMA           reduce using rule 41 (logical_or_expression -> logical_and_expression .)
    RPAREN          reduce using rule 41 (logical_or_expression -> logical_and_expression .)
    AND             shift and go to state 49


state 29

    (43) logical_and_expression -> equality_expression .
    (46) equality_expression -> equality_expression . EQ relational_expression
    (47) equality_expression -> equality_expression . NE relational_expression

    AND             reduce using rule 43 (logical_and_expression -> equality_expression .)
    ASSIGN          reduce using rule 43 (logical_and_expression -> equality_expression .)
    OR              reduce using rule 43 (logical_and_expression -> equality_expression .)
    SEMICOLON       reduce using rule 43 (logical_and_expression -> equality_expression .)
    COMMA           reduce using rule 43 (logical_and_expression -> equality_expression .)
    RPAREN          reduce using rule 43 (logical_and_expression -> equality_expression .)
    EQ              shift and go to state 50
    NE              shift and go to state 51


state 30

    (45) equality_expression -> relational_expression .
    (49) relational_expression -> relational_expression . LT additive_expression
    (50) relational_expression -> relational_expression . GT additive_expression
    (51) relational_expression -> relational_expression . LE additive_expression
    (52) relational_expression -> relational_expression . GE additive_expression

    EQ              reduce using rule 45 (equality_expression -> relational_expression .)
    NE              reduce using rule 45 (equality_expression -> relational_expression .)
    AND             reduce using rule 45 (equality_expression -> relational_expression .)
    ASSIGN          reduce using rule 45 (equality_expression -> relational_expression .)
    OR              reduce using rule 45 (equality_expression -> relational_expression .)
    SEMICOLON       reduce using rule 45 (equality_expression -> relational_expression .)
    COMMA           reduce using rule 45 (equality_expression -> relational_expression .)
    RPAREN          reduce using rule 45 (equality_expression -> relational_expression .)
    LT              shift and go to state 52
    GT              shift and go to state 53
    LE              shift and go to state 54
    GE              shift and go to state 55


state 31

    (48) relational_expression -> additive_expression .
    (54) additive_expression -> additive_expression . PLUS multiplicative_expression
    (55) additive_expression -> additive_expression . MINUS multiplicative_expression

    LT              reduce using rule 48 (relational_expression -> additive_expression .)
    GT              reduce using rule 48 (relational_expression -> additive_expression .)
    LE              reduce using rule 48 (relational_expression -> additive_expression .)
    GE              reduce using rule 48 (relational_expression -> additive_expression .)
    EQ              reduce using rule 48 (relational_expression -> additive_expression .)
    NE              reduce using rule 48 (relational_expression -> additive_expression .)
    AND             reduce using rule 48 (relational_expression -> additive_expression .)
    ASSIGN          reduce using rule 48 (relational_expression -> additive_expression .)
    OR              reduce using rule 48 (relational_expression -> additive_expression .)
    SEMICOLON       reduce using rule 48 (relational_expression -> additive_expression .)
    COMMA           reduce using rule 48 (relational_expression -> additive_expression .)
    RPAREN          reduce using rule 48 (relational_expression -> additive_expression .)
    PLUS            shift and go to state 56
    MINUS           shift and go to state 57


state 32

    (53) additive_expression -> multiplicative_expression .
    (57) multiplicative_expression -> multiplicative_expression . TIMES unary_expression
    (58) multiplicative_expression -> multiplicative_expression . DIVIDE unary_expression
    (59) multiplicative_expression -> multiplicative_expression . MOD unary_expression
